--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,10 @@
-{{#each project}}
+{{#each post}}
 <div class="row align-center mb-5">
   <div class="col-md-6">
     <h2>{{{get_emoji}}} {{name}}</h2>
   </div>
   <div class="col-md-6">
-    <h3>{{description}}</h3>
+    <h3>{{text}}</h3>
   </div>
 </div>
 {{/each}}
