--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,36 @@
-{{#each post}}
+<ul>
+  {{#each posts as |post|}}
+  <li>
+    {{> postdata post}}
+  </li>
+  {{/each}}
+</ul>
+
+<!-- {{#each posts}}
+<article class="posts">
+    <div class="title">
+        <h2>{{title}}</h2> 
+        <p class="post-text">{{text}}</p>
+        <h4 class="userdata">Posted by: <span class="glyphicon glyphicon-user"></span> {{user.name}} on: <span>{{format_date createdAt}}</span></h4>
+    </div>
+    {{#each comments}}
+    <div class="comment">
+        {{comments.text}}
+    </div>
+    {{/each}}
+</article>
+{{/each}}
+
+<!-- {{#each posts}}
 <div class="row align-center mb-5">
   <div class="col-md-6">
-    <h2>{{{get_emoji}}} {{name}}</h2>
+    <h2>{{title}}</h2>
   </div>
   <div class="col-md-6">
     <h3>{{text}}</h3>
+  </div>
+    <div class="col-md-6">
+    <h3>createdAt: {{format_date createdAt}} user_id: {{user.name}}</h3>
   </div>
 </div>
 {{/each}}
