--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,31 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
+  <title>Technocracy Blog</a></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="./css/style.css" />  
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      Tech Blog
-    </h1>
-    {{!-- {{#if logged_in}}
+  <div class="topper">
+  <header>
+    <h4><a href="/">Technocracy Blog</a></h4>
     <nav>
-      <button class="btn" id="logout">logout</button>
+    {{#if logged_in}}
+        <a href="/dashboard">{{ name }}'s Dashboard</a>
+        <button id="logout" class="btn-no-style">Log Out</button>
+        {{else}}
+        <a href="/login">Log In</a>  or  <a href="/signup">Sign Up</a>
+    {{/if}}
     </nav>
-    {{/if}} --}}
   </header>
-  <main class="container container-fluid mt-5">
+  <main>
     {{{ body }}}
   </main>
-  <footer>
-      
+  <footer class="contact-me">
+      <nav>
+      <a href="mailto:talanvor_divine@yahoo.com" title="Email me!">My email</a>
+      <a href="https://talanvord.github.io/Homework-2-May-9th/" title="Here's my portfolio!">My portfolio</a>
+      <a href="https://github.com/TalanvorD" title="Here's my github!">My Github</a>
+    </nav>
   </footer>
+  </div>
 
-  {{!-- {{#if logged_in}}
+  {{#if logged_in}}
   <script src="/js/logout.js"></script>
-  {{/if}} --}}
+  {{/if}}
 </body>
 
 </html>
