--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,35 +44,15 @@
     list-style: none
   }
   
-  button {
-    background-color: #225ca3;
-    border: 0;
-    padding: 1%;
-    color: white;
-    font-weight: bold;
-    transition: background-color .1s;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  button:hover {
-    background-color: #3486eb;
-  }
-  
-  .post-list {
-    margin: 0;
-    padding: 0;
-  }
-  
   textarea, input {
     padding: .5%;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
   }
   
   textarea:focus, input:focus {
     outline: none;
-    border: 1px solid #3486eb;
+    border: 2px solid #3486eb;
   }
   
   textarea {
@@ -119,32 +99,6 @@
     padding: 2% 4%;
   }
   
-  .btn-no-style {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    text-decoration: none;
-    color: #225ca3;
-    font-size: 100%;
-    font-weight: bold;
-    transition: color .1s;
-    margin-left: 16px;
-  }
-  
-  .btn-no-style:hover {
-    background: none;
-    color: #3486eb;
-  }
-  
-  .delete-post-btn {
-    background-color: #d41414;
-  }
-  
-  .delete-post-btn:hover {
-    background-color: #ff643d;
-  }
-  
   .post {
     margin-bottom: 2%;
     line-height: 150%;
@@ -155,7 +109,7 @@
     margin: -1.5% 0 2% 0;
   }
   
-  .comment-form {
+  /*.comment-form {
     margin-bottom: 5%;
   }
   
@@ -168,7 +122,7 @@
     font-size: 90%;
     margin-bottom: .5%;
     opacity: .6;
-  }
+  } */
   
   .new-post-form input {
     width: 300px;
