--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,7 +10,7 @@
             <label for="post-text">Content</label>
             <textarea id="post-text" name="post-text"></textarea>
         </div>
-        <button type="submit" class="btn">Add</button>
+        <button type="submit" class="btn btn-primary">Add your post!</button>
     </form>
 </section>
 {{#if posts.length}}
@@ -20,7 +20,7 @@
         {{#each posts as |post|}}
         <li>
             {{> postdata post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit Post</a>
+            <a href="/dashboard/edit/{{post.id}}">Edit Post</a>
         </li>
         {{/each}}
     </ul>
