--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,5 +1,5 @@
-<article>
-    <a href="/dashboard">&larr; Return to Dashboard</a>
+<section>
+    <a href="/dashboard">Return to Dashboard</a>
     <h2>Edit Post</h2>
     <form class="edit-post-form">
         <div>
@@ -15,10 +15,10 @@
         <p>No comments.</p>
         {{/if}}
         </div>
-        <button type="submit">Save Post</button>
-        <button type="button" class="delete-post-btn">Delete Post</button>
+        <button type="submit" class="btn btn-primary">Save Post</button>
+        <button type="button" class="btn btn-danger">Delete Post</button>
     </form>
-</article>
+</section>
 
 <form class="comment-form">
     <div>
