--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <div class="topper">
+  <div class="blogbody">
   <header>
-    <h4><a href="/">Technocracy Blog</a></h4>
+    <h4><a href="/" class="top-header-link">Technocracy Blog</a></h4>
     <nav>
     {{#if logged_in}}
         <a href="/dashboard">Your Dashboard</a>
