--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,26 +1,26 @@
 <section>
     <h2>Post something new!</h2>
-    
+        <div class="d-grid gap-2">    
     <form class="new-post-form">
-        <div>
+
             <label for="post-title">Title</label>
             <input type="text" id="post-title" name="post-title"/>
         </div>
-        <div>
+        <div class="d-grid gap-2">
             <label for="post-text">Content</label>
             <textarea id="post-text" name="post-text"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Add your post!</button>
+
+        <button type="submit" class="btn btn-primary">Add your post!</button>        </div>
     </form>
 </section>
 {{#if posts.length}}
-<section >
+<section class="your-posts">
     <h2>Your Posts</h2>
     <ul>
         {{#each posts as |post|}}
         <li>
             {{> postdata post}}
-            <a href="/dashboard/edit/{{post.id}}">Edit Post</a>
+            <a href="/dashboard/edit/{{post.id}}" class="btn btn-primary">Edit Post</a>
         </li>
         {{/each}}
     </ul>
