--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -16,7 +16,7 @@
         {{/if}}
         </div>
         <button type="submit" class="btn btn-primary">Save Post</button>
-        <button type="button" class="btn btn-danger">Delete Post</button>
+        <button type="button" class="btn btn-danger delete-post-btn">Delete Post</button>
     </form>
 </section>
 
