--- a/views/onepost.handlebars
+++ b/views/onepost.handlebars
@@ -3,11 +3,11 @@
 
 {{#if logged_in}}
 <form class="comment-form">
-    <div>
+    <div class="d-grid gap-2">
         <textarea name="comment-text"></textarea>
     </div>
 
-    <div>
+    <div class="d-grid gap-2">
         <button type="submit" class="btn btn-primary">Add a Comment</button>
     </div>
 </form>
